# stylesheet

./: .editorconfig  .gitignore  .stylelintrc.json  .travis.yml  AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  ELEMENTARYOS  HACKING  README.md  index.theme  meson.build  package-lock.json  package.json
.github/workflows/: main.yml  merge.yml  release  release.yml
data/: meson.build  stylesheet.appdata.xml  stylesheet.appdata.xml.in
debian/: changelog  control  copyright  elementary-theme.install  rules
elementary/: gtk-2.0
elementary-bubblegum/gtk-3.0/: brand-dark.css  brand.css  granite-widgets-dark.css  gtk-widgets-dark.css  gtk.css
elementary-dark/: dock.theme
elementary-high-contrast/: plank
elementary-high-contrast/gtk-3.0/: animate.css  brand-dark.css  brand.css  gtk.css
elementary-slate/: gtk-2.0  index.theme
elementary-slate/gtk-2.0/: Button  Handle  Icons  Sidebar  gtkrc
elementary-slate/gtk-3.0/: apps.css  assets  brand-dark.css  brand.css  granite-widgets.css  gtk-dark.css  gtk-widgets.css  (+2 more)
gtk-2.0/: eog.rc  gtkrc  nautilus.rc  panel-dark.rc  panel.rc  terminal.rc
gtk-3.0/: animate.css  apps.css  button.css  content-view.css  entry.css  granite-widgets-dark.css  granite-widgets.css  grip.css  gtk-dark.css  gtk-widgets-dark.css  gtk-widgets.css  gtk.css  gtkrc  menu.css  progressbar.css  scale.css  scrollbar.css  separator.css  settings.ini  sidebar.css  toolbar.css  white.css
gtk-3.20/: gtk.css
gtk-3.22/: apps.css  granite-widgets-dark.css  granite-widgets.css  gtk-dark.css  gtk-widgets-dark.css  gtk-widgets.css  gtk.css
meson/: install-to-dir.py
metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
plank/: dock.theme
po/: LINGUAS  POTFILES  aa.po  ab.po  ace.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  (+171 more)
src/: _animate.scss  _colors.scss  _exported.scss  _index.scss  _mixins-dark.scss  _mixins.scss  _overshoot.scss  _palette.scss  _typography.scss  animate.scss  apps.scss  blueberry-dark.scss  blueberry.scss  brand.scss  granite-widgets.scss  gtk-dark.scss  gtk-widgets-dark.scss  gtk-widgets.scss  gtk.scss  meson.build  palette.scss
src/banana/: banana-dark.scss  banana.scss  meson.build
src/blueberry/: blueberry-dark.scss  blueberry.scss  meson.build
src/bubblegum/: bubblegum-dark.scss  bubblegum.scss  meson.build
src/grape/: grape-dark.scss  grape.scss  meson.build
src/gtk-3.0/: _exported.scss  _index.scss  _overshoot.scss  _palette.scss  _typography.scss  meson.build
src/gtk-3.0/variants/: banana.scss  blueberry-dark.scss  grape-dark.scss  grape.scss  latte-dark.scss  latte.scss  mint-dark.scss  slate-dark.scss  strawberry.scss
src/gtk-3.0/widgets/: _cards.scss  _checkbuttons.scss  _colorchoosers.scss  _emojipicker.scss  _headerbars.scss  _index.scss  _menus.scss  _notifications.scss  _scales.scss  _spinners.scss  _stackable_boxes.scss  _toasts.scss  _treeviews.scss
src/gtk-4.0/: _index.scss  _palette.scss  _typography.scss  meson.build
src/gtk-4.0/variants/: cocoa-dark.scss  latte-dark.scss  slate.scss  strawberry-dark.scss
src/gtk-4.0/widgets/: _badges.scss  _boxes.scss  _buttons.scss  _calendars.scss  _cards.scss  _checkbuttons.scss  _colorchoosers.scss  _columnviews.scss  _dropdowns.scss  _emojipicker.scss  _entries.scss  _expanders.scss  _headerbars.scss  _headerlabels.scss  _images.scss  _index.scss  _infobars.scss  _linked.scss  _lists.scss  _menubars.scss  _menus.scss  _notebooks.scss  _osds.scss  _placeholders.scss  _popovers.scss  _progressbars.scss  _scales.scss  _scrollbars.scss  _searchbars.scss  _separators.scss  _settingspages.scss  _shortcuts.scss  _sidebars.scss  _spinbuttons.scss  _spinners.scss  _stackable_boxes.scss  _switches.scss  _toasts.scss  _toolbars.scss  _tooltips.scss  (+5 more)
src/gtk-4.0/widgets/Adwaita/: List.scss  PreferencesWindow.scss  _index.scss
src/gtk-4.0/widgets/adw/: AboutWindow.scss  Banner.scss  Dialog.scss  List.scss  MessageDialog.scss  PreferencesWindow.scss  StatusPage.scss  TabBar.scss  TabGrid.scss  TabOverview.scss  Toast.scss  ToolbarView.scss  ViewSwitcher.scss  _index.scss
src/lime/: lime-dark.scss  lime.scss  meson.build
src/mint/: meson.build  mint-dark.scss  mint.scss
src/orange/: meson.build  orange-dark.scss  orange.scss
src/plank/: dock-dark-no-indicators.theme  dock-dark.theme  dock-no-indicators.theme  dock.theme
src/strawberry/: meson.build  strawberry-dark.scss  strawberry.scss
src/variants/: banana-dark.scss  banana.scss  blueberry-dark.scss  blueberry.scss  bubblegum-dark.scss  bubblegum.scss  cocoa-dark.scss  cocoa.scss  grape-dark.scss  grape.scss  lime-dark.scss  lime.scss  mint-dark.scss  mint.scss  orange-dark.scss  orange.scss  slate-dark.scss  slate.scss  strawberry-dark.scss  strawberry.scss
src/widgets/: _avatars.scss  _badges.scss  _buttons.scss  _calendars.scss  _cards.scss  _checkbuttons.scss  _emojipicker.scss  _entries.scss  _expanders.scss  _handy.scss  _headerbars.scss  _images.scss  _index.scss  _infobars.scss  _levelbars.scss  _linked.scss  _lists.scss  _menubars.scss  _menus.scss  _mixins-dark.scss  _mixins.scss  _notebooks.scss  _notifications.scss  _panes.scss  _popovers.scss  _progressbars.scss  _scales.scss  _scrollbars.scss  _separators.scss  _sidebars.scss  _spinbuttons.scss  _spinners.scss  _stackable_boxes.scss  _storagebars.scss  _switches.scss  _toasts.scss  _toolbars.scss  _tooltips.scss  _treeviews.scss  _views.scss  (+3 more)
stories/: index.stories.js  titlebar.stories.js
xfwm4/: bottom-inactive.xpm  bottom-left-active.xpm  bottom-right-active.xpm  close-inactive-new.xpm  inactive-buttons.sh  inactive-no-buttons.sh  left-inactive.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  maximize-toggled-active.xpm  maximize-toggled-inactive.xpm  maximize-toggled-prelight.xpm  maximize-toggled-pressed.xpm  right-inactive.xpm  themerc  title-5-inactive.xpm
(+41 files in other folders)
